--- a/index.html
+++ b/index.html
@@ -18,8 +18,9 @@
       <div class="inner">
 
         <header>
-          <h1>Charladotnetvs2005</h1>
-          <h2>Charla para el club .NET sobre desarrollo con Visual Studio 2005</h2>
+          <h1>Charla .NET Visual Studio 2005</h1>
+          <h2>Esta charla fue organizada por el Club .NET de la Escuela Superior de
+Ingenier&iacute;a Inform&aacute;tica de Orense.</h2>
         </header>
 
         <section id="downloads" class="clearfix">
@@ -32,13 +33,6 @@
 
         <section id="main_content">
           <h1>
-<h1 style="text-decoration: underline;">Charla sobre Visual Studio 2005</h1>
-
-<p>
-Esta charla fue organizada por el Club .NET de la Escuela Superior de
-Ingenier&iacute;a Inform&aacute;tica de Orense.
-</p>
-
 <h2>Contenido</h2>
 
 <p>En la charla hice un repaso por varias
