--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@ de error, especialmente al cargar y salvar de/a XML.</p>
 
 <h3>El Form principal</h3>
 
-<table style="text-align: left; background-color: rgb(153, 0, 0); width: 100%;" border="0" cellpadding="2" cellspacing="2">
+<table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
 
   <tbody>
 
@@ -586,13 +586,13 @@ ponProgresoFin(); <br>
 
 <h3>El Form de entrada de datos</h3>
 
-<table style="text-align: left; background-color: rgb(102, 0, 0); width: 100%;" border="0" cellpadding="2" cellspacing="2">
+<table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
 
   <tbody>
 
     <tr>
 
-      <td style="background-color: rgb(102, 0, 0);">
+      <td>
       <code><span style="color: rgb(0, 102, 0);">// El form (ventana de di&aacute;logo) para los
 datos de cada persona</span><br>
 
@@ -708,7 +708,7 @@ Close(); <br>
 
 <h3>La clase Persona</h3>
 
-<table style="text-align: left; background-color: rgb(153, 0, 0); width: 100%;" border="0" cellpadding="2" cellspacing="2">
+<table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
 
   <tbody>
 
