--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@ e.mails.
 <h2>C&oacute;digo fuente</h2>
 
 <p>
-El c&oacute;digo fuente es accesible desde <a href="PersonaCharla3.zip">aqu&iacute;</a>. En
+El c&oacute;digo fuente es accesible desde este mismo repositorio. En
 principio, deber&iacute;a ser suficiente desempaquetarlo en un
-directorio (de mismo nombre que el Zip), y hacer que <span style="font-weight: bold;">Visual Studio</span> lo
-abriera.
+directorio (de mismo nombre que el Zip), y hacer que <span style="font-weight: bold;">Visual Studio</span> 
+abra la carpeta <i>PersonaCharla3</i>.
 </p>
 
 <p>Aparecen a continuaci&oacute;n los fuentes de las tres
