--- a/index.html
+++ b/index.html
@@ -66,13 +66,7 @@ de error, especialmente al cargar y salvar de/a XML.</p>
 
 <h3>El Form principal</h3>
 
-<table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
-
-  <tbody>
-
-    <tr>
-
-      <td>
+<p style="text-align: left; width: 100%;">
       <code><span style="color: rgb(0, 102, 0);">// El Form (ventana) principal de la
 aplicaci&oacute;n</span><br>
 
@@ -841,12 +835,7 @@ Email = email; <br>
 &nbsp;&nbsp;&nbsp; } <br>
 
 } </code>
-      </td>
-
-    </tr>
-
-  </tbody>
-</table>
+  </p>
         </section>
 
         <footer>
