--- a/index.html
+++ b/index.html
@@ -570,22 +570,12 @@ ponProgresoFin(); <br>
 &nbsp;&nbsp;&nbsp; } <br>
 
 }
-      </code></td>
+      </code></p>
 
-    </tr>
-
-  </tbody>
-</table>
 
 <h3>El Form de entrada de datos</h3>
 
-<table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
-
-  <tbody>
-
-    <tr>
-
-      <td>
+<p style="text-align: left; width: 100%;">
       <code><span style="color: rgb(0, 102, 0);">// El form (ventana de di&aacute;logo) para los
 datos de cada persona</span><br>
 
@@ -692,22 +682,13 @@ Close(); <br>
 &nbsp;&nbsp;&nbsp; } <br>
 
 }
-      </code></td>
-
-    </tr>
-
-  </tbody>
-</table>
+      </code>
+</p>
 
 <h3>La clase Persona</h3>
 
-<table style="text-align: left; width: 100%;" border="0" cellpadding="2" cellspacing="2">
-
-  <tbody>
-
-    <tr>
-
-      <td><code><span style="color: rgb(0, 102, 0);">// La clase persona</span><br>
+<p style="text-align: left; width: 100%;">
+<code><span style="color: rgb(0, 102, 0);">// La clase persona</span><br>
 
       <br>
 
